--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,4 +8,8 @@
         android:id="@+id/action_sort_by_rating"
         android:orderInCategory="2"
         android:title="Sort by Rating" />
+    <item
+        android:id="@+id/action_sort_by_favorite"
+        android:orderInCategory="3"
+        android:title="Favorite" />
 </menu>
